updated comment in Hubert_BLSTM_dynamic_loading

--- a/AI組/ScoringModule/Hubert_BLSTM_dynamic_loading.ipynb
+++ b/AI組/ScoringModule/Hubert_BLSTM_dynamic_loading.ipynb
@@ -5282,15 +5282,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# 隨著 epochs上升，表現會逐步提高。"
-      ],
-      "metadata": {
-        "id": "v-bmkWJGKiun"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "trainer.confusion_matrix(eval_loader=eval_loader)\n",
@@ -5426,6 +5417,15 @@
           "execution_count": 63
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 隨著 epochs上升，對 不標準的發音 的判斷變好。"
+      ],
+      "metadata": {
+        "id": "v-bmkWJGKiun"
+      }
     },
     {
       "cell_type": "markdown",
