--- a/AI組/ScoringModule/wav2vec2_BLSTM_using_torchDataset.ipynb
+++ b/AI組/ScoringModule/wav2vec2_BLSTM_using_torchDataset.ipynb
@@ -288,12 +288,11 @@
     }
    ],
    "source": [
-    "from transformers import HubertForCTC, Wav2Vec2Processor\n",
+    "from transformers import Wav2Vec2ForCTC, Wav2Vec2Processor\n",
     "\n",
-    "processor = Wav2Vec2Processor.from_pretrained('TKU410410103/hubert-base-japanese-asr')\n",
+    "processor = Wav2Vec2Processor.from_pretrained('TKU410410103/wav2vec2-base-japanese-asr')\n",
     "\n",
-    "# hubert = HubertForCTC.from_pretrained('TKU410410103/hubert-base-japanese-asr')\n",
-    "hubert = HubertForCTC.from_pretrained('../HubertForCTC/local_dataset/local_ASR/checkpoint-450')\n",
+    "hubert = Wav2Vec2ForCTC.from_pretrained('TKU410410103/wav2vec2-base-japanese-asr')\n",
     "hubert.config.output_hidden_states=True\n",
     "# [batch_size, sequence_length, feature]"
    ]
@@ -376,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "id": "cUfKJpxpxTRh",
     "tags": []
@@ -396,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {
     "id": "TUCKLypCWekf",
     "tags": []
@@ -421,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -500,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {
     "id": "HbgpnWeHncLy",
     "tags": []
@@ -541,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {
     "id": "zZRj68XHp70W",
     "tags": []
@@ -581,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {
     "id": "MxeahPMVAoxR",
     "tags": []
@@ -611,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {
     "id": "c-y1Y7NZrsfI",
     "tags": []
@@ -660,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -698,7 +697,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9664e1f2152473fb0480150ec5d1620",
+       "model_id": "7c7ff825e7ab4666bd72ce8fa94a64e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -722,7 +721,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4090a6eda23947dd9be302d5485ed000",
+       "model_id": "965c8023cf06498698832cc43f1a2ebd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -756,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -772,7 +771,7 @@
        "(185, 89)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "metadata": {
     "id": "XqSTJLKC_Oza",
     "tags": []
@@ -808,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 40,
    "metadata": {
     "id": "Oz6JNbsu_QEo",
     "tags": []
@@ -822,7 +821,7 @@
     "\n",
     "def lr_lambda(epoch): # epoch 從 1 開始數\n",
     "    start_lr = 1.0\n",
-    "    end_lr = 0.2\n",
+    "    end_lr = 0.5\n",
     "    \n",
     "    lr_decay = (start_lr - end_lr) / (num_epoch - 1)\n",
     "\n",
@@ -837,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -851,17 +850,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/11: Training Loss: 1.4969729423522948\n",
-      "Epoch 2/11: Training Loss: 0.9582171372391961\n",
-      "Epoch 3/11: Training Loss: 0.935133760761131\n",
-      "Epoch 4/11: Training Loss: 0.7805239611389962\n",
-      "Epoch 5/11: Training Loss: 0.7784448911520567\n",
-      "Epoch 6/11: Training Loss: 0.8034602005373348\n",
-      "Epoch 7/11: Training Loss: 0.7764318860389969\n",
-      "Epoch 8/11: Training Loss: 0.6171556546606801\n",
-      "Epoch 9/11: Training Loss: 0.6710870547050779\n",
-      "Epoch 10/11: Training Loss: 0.6755838522856886\n",
-      "Epoch 11/11: Training Loss: 0.6184633466330441\n"
+      "Epoch 1/11: Training Loss: 1.5584087258035486\n",
+      "Epoch 2/11: Training Loss: 1.005513692579486\n",
+      "Epoch 3/11: Training Loss: 0.8700797372920946\n",
+      "Epoch 4/11: Training Loss: 0.7509641176936301\n",
+      "Epoch 5/11: Training Loss: 0.6510007550093261\n",
+      "Epoch 6/11: Training Loss: 0.6400254280052402\n",
+      "Epoch 7/11: Training Loss: 0.6894814663312652\n",
+      "Epoch 8/11: Training Loss: 0.6547340529886159\n",
+      "Epoch 9/11: Training Loss: 0.6218817425383762\n",
+      "Epoch 10/11: Training Loss: 0.6007145721804011\n",
+      "Epoch 11/11: Training Loss: 0.5781081480736082\n"
      ]
     }
    ],
@@ -871,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 42,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -885,7 +884,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluation Loss: 0.698657577591283\n"
+      "Evaluation Loss: 0.6541736972119127\n"
      ]
     }
    ],
@@ -895,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -910,18 +909,18 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      " [[10 11]\n",
-      " [10 24]]\n",
-      "True Negatives: 10\n",
-      "False Positives: 11\n",
-      "False Negatives: 10\n",
-      "True Positives: 24\n",
+      " [[16  5]\n",
+      " [12 22]]\n",
+      "True Negatives: 16\n",
+      "False Positives: 5\n",
+      "False Negatives: 12\n",
+      "True Positives: 22\n",
       "----------------\n",
-      "Precision: 0.69\n",
-      "Recall: 0.71\n",
-      "Specificity: 0.48\n",
-      "Accuracy: 0.62\n",
-      "F1 Score: 0.70\n"
+      "Precision: 0.81\n",
+      "Recall: 0.65\n",
+      "Specificity: 0.76\n",
+      "Accuracy: 0.69\n",
+      "F1 Score: 0.72\n"
      ]
     }
    ],
