modify the BLSTM architecture and fine-tuning hubert

--- a/AI組/ScoringModule/Hubert_BLSTM_using_torchDataset.ipynb
+++ b/AI組/ScoringModule/Hubert_BLSTM_using_torchDataset.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 1,
    "metadata": {
     "id": "PzREwCbSPIRW",
     "tags": []
@@ -71,7 +71,7 @@
     "\n",
     "        # 串接特徵並最終評分\n",
     "        concatenated_features = torch.cat((gap_acoustic, gap_linguistic), dim=1)\n",
-    "        concatenated_features = F.relu(concatenated_features)\n",
+    "\n",
     "        score = self.final_linear(concatenated_features)\n",
     "\n",
     "        return score\n"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 2,
    "metadata": {
     "id": "TgszF160LLVu",
     "tags": []
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -281,15 +281,15 @@
     "\n",
     "processor = Wav2Vec2Processor.from_pretrained('TKU410410103/hubert-base-japanese-asr')\n",
     "\n",
-    "hubert = HubertForCTC.from_pretrained('TKU410410103/hubert-base-japanese-asr')\n",
-    "# hubert = HubertForCTC.from_pretrained('../HubertForCTC/local_dataset/local_ASR/checkpoint-450')\n",
+    "# hubert = HubertForCTC.from_pretrained('TKU410410103/hubert-base-japanese-asr')\n",
+    "hubert = HubertForCTC.from_pretrained('TKU410410103/uniTKU-hubert-japanese-asr')\n",
     "hubert.config.output_hidden_states=True\n",
     "# [batch_size, sequence_length, feature]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -319,7 +319,7 @@
        "13"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 6,
    "metadata": {
     "id": "Js0VjWxEI2Nd",
     "tags": []
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 7,
    "metadata": {
     "id": "cUfKJpxpxTRh",
     "tags": []
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 8,
    "metadata": {
     "id": "TUCKLypCWekf",
     "tags": []
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 15,
    "metadata": {
     "id": "HbgpnWeHncLy",
     "tags": []
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 16,
    "metadata": {
     "id": "zZRj68XHp70W",
     "tags": []
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 17,
    "metadata": {
     "id": "MxeahPMVAoxR",
     "tags": []
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 18,
    "metadata": {
     "id": "c-y1Y7NZrsfI",
     "tags": []
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -857,7 +857,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c711f5d8907e4d398b28a87a432bae7c",
+       "model_id": "3f3a02742a5d4977bca944935f79c068",
        "version_major": 2,
        "version_minor": 0
       },
@@ -881,7 +881,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "302b84c5d31f44639fe01db7dba93878",
+       "model_id": "72173531e49e47f08b69995b6585f6c7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -905,7 +905,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "043e1ea3eda04979bd656bce16be9bf7",
+       "model_id": "47cd5ebf088d4aa78aee3e26007beb0a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -925,22 +925,48 @@
       "    num_rows: 97\n",
       "})\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b70592333e4048608c548d11f9e3b271",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/223 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset({\n",
+      "    features: ['text', 'score', 'speech_array'],\n",
+      "    num_rows: 223\n",
+      "})\n"
+     ]
     }
    ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "df_train, df_test = train_test_split(combined_df, test_size=0.2, random_state=42)\n",
+    "eval_df = pd.concat([df_test, unknown_df], ignore_index=True)\n",
     "batch_size = 4\n",
     "\n",
     "train_loader = make_dataloader(df=df_train, batch_size=batch_size)\n",
     "eval_loader = make_dataloader(df=df_test, batch_size=batch_size)\n",
-    "unknown_loader = make_dataloader(df=unknown_df, batch_size=batch_size)"
+    "unknown_loader = make_dataloader(df=unknown_df, batch_size=batch_size)\n",
+    "data_loader = make_dataloader(df=eval_df, batch_size=batch_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -954,16 +980,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train set:  366 138\n",
-      "test set:  86 40\n",
-      "unknown set:  77 20\n"
+      "train set:  138 366  對錯比:  0.3770491803278688\n",
+      "test set:  40 86  對錯比:  0.46511627906976744\n",
+      "unknown set:  20 77  對錯比:  0.2597402597402597\n",
+      "test + unknown:  60 163  對錯比:  0.36809815950920244\n"
      ]
     }
    ],
    "source": [
-    "print('train set: ', (df_train['score']==1).sum(), (df_train['score']==0).sum())\n",
-    "print('test set: ', (df_test['score']==1).sum(), (df_test['score']==0).sum())\n",
-    "print('unknown set: ', (unknown_df['score']==1).sum(), (unknown_df['score']==0).sum())"
+    "print('train set: ', (df_train['score']==0).sum(), (df_train['score']==1).sum(), ' 對錯比: ', (df_train['score']==0).sum()/(df_train['score']==1).sum())\n",
+    "print('test set: ', (df_test['score']==0).sum(), (df_test['score']==1).sum(), ' 對錯比: ', (df_test['score']==0).sum()/(df_test['score']==1).sum())\n",
+    "print('unknown set: ', (unknown_df['score']==0).sum(), (unknown_df['score']==1).sum(), ' 對錯比: ',(unknown_df['score']==0).sum()/(unknown_df['score']==1).sum())\n",
+    "print('test + unknown: ', (eval_df['score']==0).sum(), (eval_df['score']==1).sum(), ' 對錯比: ', (eval_df['score']==0).sum()/(eval_df['score']==1).sum())"
    ]
   },
   {
@@ -977,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 32,
    "metadata": {
     "id": "XqSTJLKC_Oza",
     "tags": []
@@ -993,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 33,
    "metadata": {
     "id": "Oz6JNbsu_QEo",
     "tags": []
@@ -1006,7 +1034,7 @@
     "num_epoch = 8\n",
     "\n",
     "def lr_lambda(epoch): # epoch 從 1 開始數\n",
-    "    start_lr = 1.0\n",
+    "    start_lr = 1\n",
     "    end_lr = 0.05\n",
     "    \n",
     "    lr_decay = (start_lr - end_lr) / (num_epoch - 1)\n",
@@ -1023,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1038,29 +1066,29 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/8:\n",
-      "Training Loss: 0.29522521888452863\n",
-      "Evaluation Loss: 0.20954255829565227\n",
+      "Training Loss: 0.2600647783764298\n",
+      "Evaluation Loss: 0.19801287399604917\n",
       "Epoch 2/8:\n",
-      "Training Loss: 0.1915842652586954\n",
-      "Evaluation Loss: 0.18736598052782938\n",
+      "Training Loss: 0.17719003737771086\n",
+      "Evaluation Loss: 0.18240290484391153\n",
       "Epoch 3/8:\n",
-      "Training Loss: 0.1732233732916592\n",
-      "Evaluation Loss: 0.17209152621217072\n",
+      "Training Loss: 0.15578226975372267\n",
+      "Evaluation Loss: 0.14873763982905075\n",
       "Epoch 4/8:\n",
-      "Training Loss: 0.15016464720894065\n",
-      "Evaluation Loss: 0.14069691125769168\n",
+      "Training Loss: 0.1303925834344848\n",
+      "Evaluation Loss: 0.13984381975024007\n",
       "Epoch 5/8:\n",
-      "Training Loss: 0.12308340448154402\n",
-      "Evaluation Loss: 0.1377114844508469\n",
+      "Training Loss: 0.11274840376738991\n",
+      "Evaluation Loss: 0.1197710333217401\n",
       "Epoch 6/8:\n",
-      "Training Loss: 0.10489459290900933\n",
-      "Evaluation Loss: 0.13290980692545418\n",
+      "Training Loss: 0.1019293101585751\n",
+      "Evaluation Loss: 0.11365398086491041\n",
       "Epoch 7/8:\n",
-      "Training Loss: 0.09629000033185418\n",
-      "Evaluation Loss: 0.12178748846054077\n",
+      "Training Loss: 0.09517226325688026\n",
+      "Evaluation Loss: 0.11036352621158585\n",
       "Epoch 8/8:\n",
-      "Training Loss: 0.08902376603024702\n",
-      "Evaluation Loss: 0.11292417446384206\n"
+      "Training Loss: 0.09147960194737635\n",
+      "Evaluation Loss: 0.10957339490414597\n"
      ]
     }
    ],
@@ -1070,23 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "MGf4MoJSbQug",
-    "outputId": "47430213-8eb3-4ce8-d580-e490f55008f4",
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# trainer.evaluate(eval_loader=eval_loader)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1101,18 +1113,18 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      " [[33  7]\n",
+      " [[30 10]\n",
       " [ 6 80]]\n",
-      "True Negatives: 33\n",
-      "False Positives: 7\n",
+      "True Negatives: 30\n",
+      "False Positives: 10\n",
       "False Negatives: 6\n",
       "True Positives: 80\n",
       "----------------\n",
-      "Precision: 0.92\n",
+      "Precision: 0.89\n",
       "Recall: 0.93\n",
-      "Specificity: 0.82\n",
-      "Accuracy: 0.90\n",
-      "F1 Score: 0.92\n"
+      "Specificity: 0.75\n",
+      "Accuracy: 0.87\n",
+      "F1 Score: 0.91\n"
      ]
     }
    ],
@@ -1123,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 36,
    "metadata": {
     "tags": []
    },
@@ -1133,18 +1145,18 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      " [[14  6]\n",
-      " [11 66]]\n",
-      "True Negatives: 14\n",
-      "False Positives: 6\n",
-      "False Negatives: 11\n",
-      "True Positives: 66\n",
+      " [[15  5]\n",
+      " [10 67]]\n",
+      "True Negatives: 15\n",
+      "False Positives: 5\n",
+      "False Negatives: 10\n",
+      "True Positives: 67\n",
       "----------------\n",
-      "Precision: 0.92\n",
-      "Recall: 0.86\n",
-      "Specificity: 0.70\n",
-      "Accuracy: 0.82\n",
-      "F1 Score: 0.89\n"
+      "Precision: 0.93\n",
+      "Recall: 0.87\n",
+      "Specificity: 0.75\n",
+      "Accuracy: 0.85\n",
+      "F1 Score: 0.90\n"
      ]
     }
    ],
@@ -1154,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 37,
    "metadata": {
     "tags": []
    },
@@ -1164,33 +1176,28 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      " [[ 47  13]\n",
-      " [ 16 147]]\n",
-      "True Negatives: 47\n",
-      "False Positives: 13\n",
-      "False Negatives: 16\n",
-      "True Positives: 147\n",
+      " [[ 44  16]\n",
+      " [ 13 150]]\n",
+      "True Negatives: 44\n",
+      "False Positives: 16\n",
+      "False Negatives: 13\n",
+      "True Positives: 150\n",
       "----------------\n",
-      "Precision: 0.92\n",
-      "Recall: 0.90\n",
-      "Specificity: 0.78\n",
+      "Precision: 0.90\n",
+      "Recall: 0.92\n",
+      "Specificity: 0.73\n",
       "Accuracy: 0.87\n",
       "F1 Score: 0.91\n"
      ]
     }
    ],
    "source": [
-    "# all_df = pd.concat([combined_df, unknown_df], ignore_index=True)\n",
-    "eval_df = pd.concat([df_test, unknown_df], ignore_index=True)\n",
-    "\n",
-    "data_loader = make_dataloader(df=eval_df, batch_size=batch_size)\n",
-    "\n",
-    "precision, recall, specificity, accuracy, f1 = trainer.confusion_matrix(eval_loader=data_loader)"
+    "precision, recall, specificity, accuracy, f1 = trainer.confusion_matrix(eval_loader=data_loader)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 27,
    "metadata": {
     "tags": []
    },
@@ -1229,19 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
-   "metadata": {
-    "id": "5-tSd8NTO6wq",
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "acoustic_input, text, y_batch = next(iter(eval_loader))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1252,65 +1247,40 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.9091],\n",
+      "        [0.0741],\n",
+      "        [0.9122],\n",
+      "        [1.0152]], device='cuda:0')\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "tensor([[0.3805],\n",
-       "        [0.4536],\n",
-       "        [0.9160],\n",
-       "        [0.4843]], device='cuda:0')"
+       "(('なんさい', 'だいがく', 'なんさい', 'あのひと'),\n",
+       " tensor([[1.],\n",
+       "         [0.],\n",
+       "         [1.],\n",
+       "         [1.]]))"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trainer.pred(acoustic_input, text) # 在做loss計算之前預測的分數都一樣，練太少或是長度太短？ random seed\n",
-    "\n",
-    "# 100 -> 優\n",
-    "# .80 -> 佳\n",
-    "# .60 -> 可\n",
-    "# .40 -> 尚可\n",
-    "# .20 -> 差\n",
-    "# ..0 -> 劣\n",
+    "acoustic_input, text, y_batch = next(iter(eval_loader))\n",
+    "print(trainer.pred(acoustic_input, text)) # 在做loss計算之前預測的分數都一樣，練太少或是長度太短？ random seed\n",
+    "text, y_batch\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "krbDi3nLao6o",
-    "outputId": "338b1e4f-18f8-4a82-f508-063493ed4e3c",
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(('エンジニア', 'エンジニア', 'なんさい', 'あのひと'),\n",
-       " tensor([[0.],\n",
-       "         [1.],\n",
-       "         [1.],\n",
-       "         [1.]]))"
-      ]
-     },
-     "execution_count": 244,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text, y_batch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 38,
    "metadata": {
     "id": "xU0PAPuB4B-h",
     "tags": []
