--- a/demo/testImport.ipynb
+++ b/demo/testImport.ipynb
@@ -112,7 +112,7 @@
    "source": [
     "import scoringModule\n",
     "\n",
-    "result, text = scoringModule.scoring('./audio/あなた.mp3')\n",
+    "result, text = scoringModule.scoring('./audio/あのひと.mp3')\n",
     "print(result, text)"
    ]
   },
