model training code comment

--- a/AI組/HuBERT/HuBERT_base_on_japanese/hubertForCTC_base_japanese_hiragana.ipynb
+++ b/AI組/HuBERT/HuBERT_base_on_japanese/hubertForCTC_base_japanese_hiragana.ipynb
@@ -80,11 +80,10 @@
     }
    ],
    "source": [
-    "# \"vumichien/wav2vec2-large-xlsr-japanese-hỉragana\"\n",
     "\n",
     "from transformers import Wav2Vec2Processor\n",
     "\n",
-    "processor = Wav2Vec2Processor.from_pretrained(\"slplab/wav2vec2-xls-r-300m-japanese-hiragana\")\n",
+    "processor = Wav2Vec2Processor.from_pretrained(\"TKU410410103/hubert-base-japanese-asr\")\n",
     "\n",
     "vocab_size = processor.tokenizer.vocab_size\n",
     "\n",
@@ -446,6 +445,7 @@
     "import librosa\n",
     "import numpy as np\n",
     "\n",
+    "# 重新取樣(48000 -> 16000)\n",
     "def process_waveforms(batch):\n",
     "    speech_arrays = []\n",
     "    sampling_rates = []\n",
@@ -519,7 +519,10 @@
     "conv = kakasi.getConverter()\n",
     "\n",
     "def prepare_char(batch):\n",
+    "    # 用 MeCab對句子進行分詞\n",
     "    batch[\"sentence\"] = conv.do(wakati.parse(batch[\"sentence\"]).strip())\n",
+    "    \n",
+    "    # 移除需要忽略的 CHARS_TO_IGNORE\n",
     "    batch[\"sentence\"] = re.sub(chars_to_ignore_regex,'', batch[\"sentence\"]).strip()\n",
     "    return batch"
    ]
@@ -649,6 +652,7 @@
     "    batch[\"input_values\"] = processor(batch[\"array\"], sampling_rate=batch[\"sampling_rate\"]).input_values[0]\n",
     "\n",
     "    with processor.as_target_processor():\n",
+    "        # 使用 processor將句子轉對應的 labels\n",
     "        batch[\"labels\"] = processor(batch[\"sentence\"]).input_ids\n",
     "    return batch\n"
    ]
@@ -768,18 +772,21 @@
     "\n",
     "@dataclass\n",
     "class DataCollatorCTCWithPadding:\n",
-    "    processor: Wav2Vec2Processor\n",
-    "    padding: Union[bool, str] = True  # Ensures padding is enabled\n",
+    "    processor: Wav2Vec2Processor  # 定義 Wav2Vec2Processor 類別的處理器\n",
+    "    padding: Union[bool, str] = True\n",
     "    max_length: Optional[int] = None\n",
     "    max_length_labels: Optional[int] = None\n",
     "    pad_to_multiple_of: Optional[int] = None\n",
     "    pad_to_multiple_of_labels: Optional[int] = None\n",
     "\n",
     "    def __call__(self, features: List[Dict[str, Union[List[int], torch.Tensor]]]) -> Dict[str, torch.Tensor]:\n",
+    "        # 從輸入特徵中提取 input_values\n",
     "        input_features = [{\"input_values\": feature[\"input_values\"]} for feature in features]\n",
+    "        \n",
+    "        # 從輸入特徵中提取 labels\n",
     "        label_features = [{\"input_ids\": feature[\"labels\"]} for feature in features]\n",
-    "\n",
-    "        # Pad input features to ensure uniform length\n",
+    "        \n",
+    "        # 使用 processor進行填充\n",
     "        batch = self.processor.pad(\n",
     "            input_features,\n",
     "            padding=self.padding,\n",
@@ -788,7 +795,7 @@
     "            return_tensors=\"pt\",\n",
     "          )\n",
     "\n",
-    "        # Process and pad labels separately to ensure uniform length\n",
+    "        # 使用 processor對 labels進行填充\n",
     "        with self.processor.as_target_processor():\n",
     "            labels_batch = self.processor.pad(\n",
     "              label_features,\n",
@@ -798,7 +805,7 @@
     "              return_tensors=\"pt\",\n",
     "            )\n",
     "\n",
-    "    # Mask padding in labels to ignore them in loss calculation\n",
+    "        # 將不用注意的部分 labels設為 -100，為了在計算損失時忽略\n",
     "        labels = labels_batch[\"input_ids\"].masked_fill(labels_batch[\"attention_mask\"].ne(1), -100)\n",
     "\n",
     "        batch[\"labels\"] = labels\n",
@@ -873,36 +880,44 @@
     "from transformers import Trainer\n",
     "from torch.optim.lr_scheduler import LambdaLR\n",
     "\n",
+    "\n",
+    "# 學習率調節器，附帶 warm up和 衰退\n",
     "def get_polynomial_decay_schedule_with_warmup(optimizer, num_warmup_steps, num_training_steps, lr_end=1e-7, power=1.2, last_epoch=-1):\n",
     "\n",
     "    lr_init = optimizer.defaults[\"lr\"]\n",
     "    assert lr_init > lr_end, f\"lr_end ({lr_end}) must be be smaller than initial lr ({lr_init})\"\n",
     "\n",
     "    def lr_lambda(current_step: int):\n",
+    "        # warm up，線性增加\n",
     "        if current_step < num_warmup_steps:\n",
     "            return float(current_step) / float(max(1, num_warmup_steps))\n",
+    "        # 訓練結尾，學習率保持為最終學習率\n",
     "        elif current_step > num_training_steps:\n",
     "            return lr_end / lr_init\n",
+    "        # 在 warm up之後到 end之前，學習率根據多項式衰減\n",
     "        else:\n",
     "            lr_range = lr_init - lr_end\n",
     "            decay_steps = num_training_steps - num_warmup_steps\n",
     "            pct_remaining = 1 - (current_step - num_warmup_steps) / decay_steps\n",
     "            decay = lr_range * pct_remaining ** power + lr_end\n",
     "            return decay / lr_init\n",
-    "\n",
+    "    # 回傳學習調節器\n",
     "    return LambdaLR(optimizer, lr_lambda, last_epoch)\n",
     "\n",
-    "\n",
+    "# 繼承 Trainer，並自定義的學習率調節器\n",
     "class PolyTrainer(Trainer):\n",
     "    def __init__(self, *args, **kwargs):\n",
     "        super().__init__(*args, **kwargs)\n",
     "\n",
+    "    # 自定義的學習率調節器\n",
     "    def create_scheduler(self, num_training_steps: int):\n",
     "        self.lr_scheduler = get_polynomial_decay_schedule_with_warmup(\n",
     "                self.optimizer,\n",
     "                num_warmup_steps=self.args.warmup_steps,\n",
     "                num_training_steps=num_training_steps\n",
     "                )\n",
+    "        \n",
+    "    # 創建優化器和學習率調節器\n",
     "    def create_optimizer_and_scheduler(self, num_training_steps: int):\n",
     "        self.create_optimizer()\n",
     "        self.create_scheduler(num_training_steps)"
@@ -1077,8 +1092,8 @@
     "set_seed(42)\n",
     "\n",
     "training_args = TrainingArguments(\n",
-    "  output_dir=\"./hubert_ASR\",\n",
-    "  per_device_train_batch_size=16, # 調小以適應 CPU\n",
+    "  output_dir=\"./hubert_ASR\", # checkpoint儲存位置\n",
+    "  per_device_train_batch_size=16,\n",
     "  gradient_accumulation_steps=2,\n",
     "  learning_rate=1e-4,\n",
     "  weight_decay=0.005,\n",
@@ -1089,7 +1104,7 @@
     "  fp16=True, # False => 不用 GPU\n",
     "  group_by_length=True,\n",
     "  evaluation_strategy=\"steps\",\n",
-    "  per_device_eval_batch_size=16, # 調小以適應 CPU\n",
+    "  per_device_eval_batch_size=16,\n",
     "  save_steps=1000,\n",
     "  eval_steps=1000,\n",
     "  logging_steps=1000,\n",
