--- a/AI組/ScoringModule/HuBERT_BLSTM/Hubert_BLSTM_using_torchDataset.ipynb
+++ b/AI組/ScoringModule/HuBERT_BLSTM/Hubert_BLSTM_using_torchDataset.ipynb
@@ -270,7 +270,6 @@
     "\n",
     "processor = Wav2Vec2Processor.from_pretrained('TKU410410103/hubert-base-japanese-asr')\n",
     "\n",
-    "# hubert = HubertForCTC.from_pretrained('TKU410410103/hubert-base-japanese-asr')\n",
     "hubert = HubertForCTC.from_pretrained('TKU410410103/uniTKU-hubert-japanese-asr')\n",
     "hubert.config.output_hidden_states=True\n",
     "# [batch_size, sequence_length, feature]"
@@ -314,7 +313,6 @@
     }
    ],
    "source": [
-    "import torch\n",
     "with torch.no_grad():\n",
     "    output = hubert(torch.rand(1, 16000))\n",
     "len(output.hidden_states)"
@@ -709,10 +707,10 @@
     "    # all layers\n",
     "    transformer_hidden_states = outputs.hidden_states[:]\n",
     "\n",
-    "    # Stack transformer hidden states to have a new dimension for layers\n",
+    "    # Stack transformer hidden states\n",
     "    stacked_hidden_states = torch.stack(transformer_hidden_states)\n",
     "\n",
-    "    # Average across layers dimension (0) while keeping sequence_length\n",
+    "    # Average across layers dimension (0)\n",
     "    overall_avg_hidden_state = torch.mean(stacked_hidden_states, dim=0)\n",
     "\n",
     "    return overall_avg_hidden_state # [batch_size, sequence_length, featrues]\n"
@@ -1182,89 +1180,6 @@
    ],
    "source": [
     "precision, recall, specificity, accuracy, f1 = trainer.confusion_matrix(eval_loader=data_loader)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# 未做資料增量\n",
-    "# Confusion Matrix:\n",
-    "#  [[13  8]\n",
-    "#  [ 8 26]]\n",
-    "# True Negatives: 13\n",
-    "# False Positives: 8\n",
-    "# False Negatives: 8\n",
-    "# True Positives: 26\n",
-    "# ----------------\n",
-    "# Precision: 0.76\n",
-    "# Recall: 0.76\n",
-    "# Specificity: 0.62\n",
-    "# Accuracy: 0.71\n",
-    "# F1 Score: 0.76\n",
-    "\n",
-    "# 資料增量後 [-1.3, -1.3] [0.7, 1.3]\n",
-    "# Confusion Matrix:\n",
-    "#  [[35  5]\n",
-    "#  [10 76]]\n",
-    "# True Negatives: 35\n",
-    "# False Positives: 5\n",
-    "# False Negatives: 10\n",
-    "# True Positives: 76\n",
-    "# ----------------\n",
-    "# Precision: 0.94\n",
-    "# Recall: 0.88\n",
-    "# Specificity: 0.88\n",
-    "# Accuracy: 0.88\n",
-    "# F1 Score: 0.91"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "rXwWzRjxK-1d",
-    "outputId": "a8a78699-6ce6-43ba-af9a-0155eb599dae",
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[0.9091],\n",
-      "        [0.0741],\n",
-      "        [0.9122],\n",
-      "        [1.0152]], device='cuda:0')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(('なんさい', 'だいがく', 'なんさい', 'あのひと'),\n",
-       " tensor([[1.],\n",
-       "         [0.],\n",
-       "         [1.],\n",
-       "         [1.]]))"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "acoustic_input, text, y_batch = next(iter(eval_loader))\n",
-    "print(trainer.pred(acoustic_input, text)) # 在做loss計算之前預測的分數都一樣，練太少或是長度太短？ random seed\n",
-    "text, y_batch\n",
-    "\n"
    ]
   },
   {
