--- a/AI組/wav2vec2/wav2vec2ForCTC_base_japanese_hiragana.ipynb
+++ b/AI組/wav2vec2/wav2vec2ForCTC_base_japanese_hiragana.ipynb
@@ -136,11 +136,10 @@
     }
    ],
    "source": [
-    "# \"vumichien/wav2vec2-large-xlsr-japanese-hỉragana\"\n",
     "\n",
     "from transformers import Wav2Vec2Processor\n",
     "\n",
-    "processor = Wav2Vec2Processor.from_pretrained(\"slplab/wav2vec2-xls-r-300m-japanese-hiragana\")\n",
+    "processor = Wav2Vec2Processor.from_pretrained(\"TKU410410103/hubert-base-japanese-asr\")\n",
     "\n",
     "vocab_size = processor.tokenizer.vocab_size\n",
     "\n",
@@ -1116,7 +1115,7 @@
     "@dataclass\n",
     "class DataCollatorCTCWithPadding:\n",
     "    processor: Wav2Vec2Processor\n",
-    "    padding: Union[bool, str] = True  # Ensures padding is enabled\n",
+    "    padding: Union[bool, str] = True  \n",
     "    max_length: Optional[int] = None\n",
     "    max_length_labels: Optional[int] = None\n",
     "    pad_to_multiple_of: Optional[int] = None\n",
@@ -1126,7 +1125,6 @@
     "        input_features = [{\"input_values\": feature[\"input_values\"]} for feature in features]\n",
     "        label_features = [{\"input_ids\": feature[\"labels\"]} for feature in features]\n",
     "\n",
-    "        # Pad input features to ensure uniform length\n",
     "        batch = self.processor.pad(\n",
     "            input_features,\n",
     "            padding=self.padding,\n",
@@ -1135,7 +1133,6 @@
     "            return_tensors=\"pt\",\n",
     "          )\n",
     "\n",
-    "        # Process and pad labels separately to ensure uniform length\n",
     "        with self.processor.as_target_processor():\n",
     "            labels_batch = self.processor.pad(\n",
     "              label_features,\n",
@@ -1145,7 +1142,6 @@
     "              return_tensors=\"pt\",\n",
     "            )\n",
     "\n",
-    "    # Mask padding in labels to ignore them in loss calculation\n",
     "        labels = labels_batch[\"input_ids\"].masked_fill(labels_batch[\"attention_mask\"].ne(1), -100)\n",
     "\n",
     "        batch[\"labels\"] = labels\n",
